# CausalRAG2

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
causalrag2/: __init__.py  core.py  graph_utils.py  indexer.py  prompts.py  token_utils.py
data/holisqa/: README.md
data/holisqa/biology/: all_abstracts.txt  articles.jsonl  qa.jsonl  sentences.jsonl  slices.jsonl
data/holisqa/business/: all_abstracts.txt  articles.jsonl  qa.jsonl  sentences.jsonl  slices.jsonl
data/holisqa/computer_science/: all_abstracts.txt  articles.jsonl  qa.jsonl  sentences.jsonl  slices.jsonl
data/holisqa/medicine/: all_abstracts.txt  articles.jsonl  qa.jsonl  sentences.jsonl  slices.jsonl
data/holisqa/psychology/: all_abstracts.txt  articles.jsonl  qa.jsonl  sentences.jsonl  slices.jsonl
docs/: graph_construction.md  method.md
examples/: quickstart.py
scripts/: holisqa_1_download_openalex.py  holisqa_2_generate_qa.py
tests/: test_pipeline.py
